<resources>
    <string name="app_name">ReMind</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- Daily Habits Strings -->
    <string name="good_morning">Good Morning</string>
    <string name="today_date">Today, October 10</string>
    <string name="habits_completed">0 of 0 habits completed</string>
    <string name="todays_habits">Today\'s Habits</string>
    <string name="weekly_overview">Weekly Overview</string>
    <string name="day_streak">Day Streak</string>
    <string name="this_week">This Week</string>
    <string name="total_habits">Total Habits</string>
    <string name="add_habit">Add Habit</string>
    <string name="no_habits">No habits</string>
    <string name="no_habits_yet">No habits yet</string>
    <string name="add_first_habit">Tap the button below to add your first habit</string>
    <string name="habit_icon">Habit icon</string>
    <string name="time">Time</string>
    <string name="streak">Streak</string>
    <string name="zero">0</string>

    <!-- Add Habit Dialog -->
    <string name="add_new_habit">Add New Habit</string>
    <string name="habit_name">Habit name</string>
    <string name="category">Category</string>
    <string name="health">Health</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="learning">Learning</string>
    <string name="hydration">Hydration</string>
    <string name="sleep">Sleep</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="select_time">Select time</string>
    <string name="cancel">Cancel</string>
    <string name="save_habit">Save Habit</string>
    <string name="close">Close</string>
    <string name="expand">Expand</string>

    <!-- Navigation -->
    <string name="daily_habits">Daily Habits</string>
    <string name="habit_details">Habit Details</string>

    <!-- Habit Details -->
    <string name="statistics">Statistics</string>
    <string name="times_completed">Times Completed</string>
    <string name="best_streak">Best Streak</string>
    <string name="completion_rate">Completion Rate</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="delete_habit">Delete Habit</string>
    <string name="completed">Completed</string>

    <!-- Add Habit Fragment -->
    <string name="select_category_description">Choose a category for your habit</string>
    <string name="select_time_description">When do you want to be reminded?</string>
    <string name="frequency">Frequency</string>
    <string name="select_frequency_description">How often do you want to do this habit?</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>

    <!-- Bottom Navigation -->
    <string name="habits">Habits</string>
    <string name="mood">Mood</string>
    <string name="water">Water</string>

    <!-- Mood Journal -->
    <string name="mood_journal">Mood Journal</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="select_your_current_mood">Select your current mood</string>
    <string name="add_note_optional">Add a note (optional)</string>
    <string name="save_mood">Save Mood</string>
    <string name="mood_history">Mood History</string>
    <string name="no_mood_entries">No mood entries yet</string>
    <string name="start_tracking_mood">Start tracking your mood to see patterns</string>
    <string name="delete">Delete</string>

    <!-- Hydration Tracker -->
    <string name="hydration_tracker">Hydration Tracker</string>
    <string name="todays_progress">Today\'s Progress</string>
    <string name="quick_add">Quick Add</string>
    <string name="tap_to_log_water">Tap to log water intake</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="change">Change</string>
    <string name="reminder_notifications">Reminder Notifications</string>
    <string name="get_reminded_every_2_hours">Get reminded every 10 seconds (testing)</string>
    <string name="todays_history">Today\'s History</string>
    <string name="no_water_logged">No water logged yet</string>
    <string name="start_logging_water">Start logging your water intake</string>
    <string name="enter_custom_amount">Enter custom amount (ml)</string>
    <string name="add_water">Add Water</string>
    <string name="water_added">Water added successfully!</string>
    <string name="enter_daily_goal">Enter daily goal (ml)</string>
    <string name="goal_updated">Goal updated successfully!</string>
    <string name="time_to_drink_water">Time to drink water!</string>
    <string name="stay_hydrated">Stay hydrated throughout the day</string>
    <string name="ml_remaining">%d ml remaining</string>
    <string name="goal_achieved">🎉 Goal achieved!</string>
    <string name="reminder_notification_started">Reminder notification Started</string>
    <string name="you_will_receive_reminders">You will receive reminders every 10 seconds (testing)</string>

    <!-- Widget -->
    <string name="widget_description">Shows today\'s habit completion percentage</string>
    
    <!-- Menu -->
    <string name="menu">Menu</string>
</resources>