<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/DailyHabitsFragment">

    <fragment
        android:id="@+id/DailyHabitsFragment"
        android:name="com.example.remind.DailyHabitsFragment"
        android:label="@string/daily_habits"
        tools:layout="@layout/fragment_daily_habits">

        <action
            android:id="@+id/action_DailyHabitsFragment_to_HabitDetailsFragment"
            app:destination="@id/HabitDetailsFragment" />
        <action
            android:id="@+id/action_DailyHabitsFragment_to_AddHabitFragment"
            app:destination="@id/AddHabitFragment" />
    </fragment>

    <fragment
        android:id="@+id/MoodJournalFragment"
        android:name="com.example.remind.MoodJournalFragment"
        android:label="@string/mood_journal"
        tools:layout="@layout/fragment_mood_journal" />

    <fragment
        android:id="@+id/HydrationFragment"
        android:name="com.example.remind.HydrationFragment"
        android:label="@string/hydration_tracker"
        tools:layout="@layout/fragment_hydration" />

    <fragment
        android:id="@+id/AddHabitFragment"
        android:name="com.example.remind.AddHabitFragment"
        android:label="@string/add_new_habit"
        tools:layout="@layout/fragment_add_habit">

        <action
            android:id="@+id/action_AddHabitFragment_to_DailyHabitsFragment"
            app:destination="@id/DailyHabitsFragment" />
    </fragment>

    <fragment
        android:id="@+id/HabitDetailsFragment"
        android:name="com.example.remind.HabitDetailsFragment"
        android:label="@string/habit_details"
        tools:layout="@layout/fragment_habit_details">

        <action
            android:id="@+id/action_HabitDetailsFragment_to_DailyHabitsFragment"
            app:destination="@id/DailyHabitsFragment" />
    </fragment>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.remind.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.remind.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>